--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,7 +15,8 @@
 		<param-value>/WEB-INF/vue/erreur/errorPage.jsp</param-value>
 	</context-param>
 	
-	  <error-page>
+	<!-- Désactivation pour test -->
+<!-- 	  <error-page>
   	<error-code>404</error-code>
 	<location>/vue/error/404.jsp</location>
   </error-page>
@@ -23,7 +24,7 @@
 	  <error-page>
   	<exception-type>java.lang.Throwable</exception-type>
   	<location>/vue/error/pageErrorData.jsp</location>
-  </error-page>
+  </error-page> -->
 
 
 </web-app>
